CH07 Final Project Commit

--- a/FinalProject/FinalProject/PersonalFinanceTracker/Views/Accounts/Index.cshtml
+++ b/FinalProject/FinalProject/PersonalFinanceTracker/Views/Accounts/Index.cshtml
@@ -17,8 +17,9 @@
             <tr>
                 <td>@item.Name</td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-area="Manage" asp-controller="Accounts" asp-action="Create">Add</a>
+                    <a asp-area="Manage" asp-controller="Accounts" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                    <a asp-area="Manage" asp-controller="Accounts" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
         }
