--- a/FinalProject/FinalProject/PersonalFinanceTracker/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/FinalProject/FinalProject/PersonalFinanceTracker/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -1,2 +1,4 @@
-﻿<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+﻿<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJ+Y3o6m8Q7Xg5e1s8e7w5dQ4Bf0c5/qo3F7M=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate-unobtrusive/4.0.0/jquery.validate.unobtrusive.min.js"></script>
