--- a/FinalProject/FinalProject/PersonalFinanceTracker/Views/Accounts/Delete.cshtml
+++ b/FinalProject/FinalProject/PersonalFinanceTracker/Views/Accounts/Delete.cshtml
@@ -1,11 +1,27 @@
 ﻿@model PersonalFinanceTracker.Models.Account
+@{
+    ViewData["Title"] = "Delete Account";
+}
 
-<h1>Delete Account</h1>
+<h2 class="mb-3 text-danger">Delete Account</h2>
+<h5>Are you sure you want to delete this account?</h5>
 
-<p>Are you sure you want to delete <strong>@Model.Name</strong>?</p>
+<div class="border rounded p-3 mb-3 bg-light">
+    <dl class="row">
+        <dt class="col-sm-3">Name</dt>
+        <dd class="col-sm-9">@Model.Name</dd>
+        <dt class="col-sm-3">User Id</dt>
+        <dd class="col-sm-9">@Model.UserId</dd>
+        <dt class="col-sm-3">Transactions</dt>
+        <dd class="col-sm-9">@((Model.Transactions?.Count ?? 0).ToString())</dd>
+    </dl>
+</div>
 
 <form asp-action="Delete" asp-route-id="@Model.Id" method="post">
     @Html.AntiForgeryToken()
-    <button type="submit" class="btn btn-danger">Delete</button>
-    <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+    <div class="d-flex gap-2">
+        <button type="submit" class="btn btn-danger">Delete</button>
+        <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+    </div>
 </form>
+
