CH10 & CH11 Final Project Commit/Resubmission
Paging controls and search functionality implemented on Transactions listing.

--- a/FinalProject/FinalProject/PersonalFinanceTracker/Views/Transactions/Index.cshtml
+++ b/FinalProject/FinalProject/PersonalFinanceTracker/Views/Transactions/Index.cshtml
@@ -7,6 +7,7 @@
 @await Html.PartialAsync("_StatusMessage")
 
 <h2 class="mb-3">Transactions</h2>
+<p class="text-muted small">Paging and search enabled.</p>
 
 <form method="get" class="row g-2 mb-3">
     <div class="col-auto">
