--- a/FinalProject/FinalProject/PersonalFinanceTracker/Areas/Admin/Views/Transactions/Delete.cshtml
+++ b/FinalProject/FinalProject/PersonalFinanceTracker/Areas/Admin/Views/Transactions/Delete.cshtml
@@ -1,7 +1,9 @@
 ﻿@model PersonalFinanceTracker.Models.Transaction
+
 @{
     ViewData["Title"] = "Delete Transaction";
 }
+
 <h2 class="mb-3 text-danger">Delete Transaction</h2>
 <h5>Are you sure you want to delete this transaction?</h5>
 
@@ -9,19 +11,25 @@
     <dl class="row">
         <dt class="col-sm-3">Date</dt>
         <dd class="col-sm-9">@Model.Date.ToShortDateString()</dd>
+
         <dt class="col-sm-3">Payee</dt>
         <dd class="col-sm-9">@Model.Payee</dd>
+
         <dt class="col-sm-3">Type</dt>
         <dd class="col-sm-9">@Model.Type</dd>
+
         <dt class="col-sm-3">Account</dt>
         <dd class="col-sm-9">@Model.Account?.Name</dd>
+
         <dt class="col-sm-3">Amount</dt>
         <dd class="col-sm-9">@Model.Amount.ToString("C")</dd>
+
         @if (!string.IsNullOrWhiteSpace(Model.Notes))
         {
             <dt class="col-sm-3">Notes</dt>
             <dd class="col-sm-9">@Model.Notes</dd>
         }
+
         <dt class="col-sm-3">Categories</dt>
         <dd class="col-sm-9">
             @if (Model.TransactionCategories.Any())
@@ -39,13 +47,19 @@
     </dl>
 </div>
 
-<form asp-action="Delete"
+<form asp-action="DeleteConfirmed"
       asp-route-id="@Model.Id"
       asp-route-slug="@Model.Slug"
       method="post">
     @Html.AntiForgeryToken()
+
     <div class="d-flex gap-2">
         <button type="submit" class="btn btn-danger">Delete</button>
-        <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+        <a asp-action="Index"
+           asp-controller="Transactions"
+           asp-area=""
+           class="btn btn-secondary">
+            Cancel
+        </a>
     </div>
 </form>
